<resources>
    <string name="app_name">Dome</string>

    <string name="title_month">Month</string>
    <string name="title_week">Week</string>
    <string name="title_day">Day</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="sunday_abbr">Sun</string>
    <string name="monday_abbr">Mon</string>
    <string name="tuesday_abbr">Tues</string>
    <string name="wednesday_abbr">Wed</string>
    <string name="thursday_abbr">Thur</string>
    <string name="friday_abbr">Fri</string>
    <string name="saturday_abbr">Sat</string>
    <string name="pref_calendars_title">Calendars</string>
</resources>
